Adds Zalo authentication and refactors registration flow
Implements Zalo as an authentication provider, enhancing login options for users.

Refactors the registration process to include a two-step verification via OTP. Updates the UI components for better user experience, ensuring a smoother transition between steps.

Updates API routes and adjusts environment variables for new authentication mechanisms.

Removes unused middleware to streamline the application.

Fixes related to job posting and management pages for improved functionality and usability.

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_API_URL=/api
+# NEXTAUTH_SECRET=hySZDRRtv5nPwDreXeGVwHxGzPQXZa5d
+NEXT_PUBLIC_ZALO_APP_ID=2873380454691200822
+NEXT_PUBLIC_ZALO_SECRET_KEY=XVBQ1X23hWqLEVAMMII9
+NEXT_PUBLIC_CLIENT_ID=8VMDljyXs92lXM15kEaS7LuXKvzQIns1
