--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "8.5.1",
+    "html-react-parser": "^5.2.5",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
