--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-query": "^5.76.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
+    "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
