--- a/.dev/docker/Dockerfile
+++ b/.dev/docker/Dockerfile
@@ -12,6 +12,7 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+ENV NEXT_PUBLIC_API_URL=/api
 RUN npm run build
 
 FROM base AS runner
